# SimpleRaytracer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  wscript
includes/: BRDF.h  Camera.h  Film.h  Lights.h  LocalGeo.h  Primitives.h  Ray.h  Scene.h  Shapes.h  Transformation.h  readfile.h  typeDefs.h
scene-files/: scene1.test  scene2.test  scene3.test  scene4-ambient.test  scene4-diffuse.test  scene4-specular.test  scene4-specular2.test  scene5.test  scene6.test  scene7.test  testScene.test  triNormal.test
waf_tools/: freeimage.py  tbb.py
